# SCRIBE-chromatin

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/source/: analysis.rst  architecture.rst  conf.py  configuration.rst  index.rst  installation.rst  modules.rst  quickstart.rst
examples/: synthetic_forward_simulation.py  synthetic_maxent_optimization.py
examples/chip_modded/: run.py
examples/chipseq_maxent/: run.py
examples/first_maxent_optimization/: run.py
examples/quickstart/: 01_download_data.py  02_process_data.py  03_run_simulation.py  04_maxent_optimization.py  05_analyze_simulation.py  (+4 more)
hooks/: pre-commit  pre-push
pylib/: analysis.py  chipseqPipeline.py  dampen.py  dataloader.py  datapipeline.py  default.py  download_data.py  energy_utils.py  epilib.py  hic.py  ideal_chain.py  maxent.py  optimize.py  parameters.py  paths.py  pipeline.py  plot_contactmap.py  pysim.py  scaleup.py  sequence_analysis.py
scribe/: __init__.py  analysis.py  analysis_pipeline.py  chipseq_pipeline.py  config.py  dampen.py  data_loader.py  data_pipeline.py  datapipeline.py  default.py  download_data.py  epilib.py  hic.py  ideal_chain.py  maxent.py  maxent_pipeline.py  optimize.py  parameters.py  paths.py  pipeline.py  plot_contactmap.py  pysim.py  reproduce.py  scaleup.py  scribe_sim.py  utils.py
src/: .gitignore  Angle.h  Bond.h  Makefile  pybind_Sim.cpp
tests/: __init__.py  test_default.py  test_download_data.py  test_hic.py  test_paths.py  test_simulation_integration.py
(+10 files in other folders)
