[project]
name = "scribe"
version = "0.1.0"
description = "Sequence-to-Chromatin structure via epigenetic Representation, Investigation, Benchmarking, and Editing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Soren Kyhl", email = "soren@kyhl.com"}
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.github
    | \.pytest_cache
    | __pycache__
    | build
    | dist
    | docs/build
    | include
    | maxent/bin
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "docs/build",
    "include",
    "maxent/bin",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "E402",   # module level import not at top of file
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from within except
    "B905",   # zip without strict= (Python 3.10+)
    "E741",   # ambiguous variable name
    "UP007",  # use X | Y for type annotations (prefer Union for 3.8 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["pylib"]
